- Added: New payment module for ePay (www.epay.eu)
- Added: Hooks for altering product before output
- Added: Payment and and shipping module can now provide additional info for each order (trough a button/operation)
- Added limit panel to tl_iso_product_categories (Ticket #132)
- Fixed: Images are now updated when selecting a product variant
- Fixed: Null array bug in ModuleIsotopeProductFilter
- Fixed: Null object bug in IsotopeCart
- Fixed: Disabled deprecated product storage in checkout module - now copies only product options to order items table.
- Fixed: Changed all price fields to use decimal(12,2) (payment gateways require 2 digit precision)
- Removed: Paypal Website Payments Pro option - use Paypal Payflow Pro or Paypal Standard

Version 0.1.2 (2010-??-??)
------------------------------
- Fixed: Backend variant listing showed unassigned attributes (Ticket #135)

Version 0.1.1 (2010-06-06)
------------------------------
- Customer email is now sent to member email if no email in address book
- Fixed: Countries and shipping methods for payment modules are no longer mandatory
- Fixed: Subdivisions for shipping modules should now work correctly
- Fixed: Tax was not applied to flat price shipping
- Fixed: Final price for paypal standard payment module did not include taxes
- Fixed: Latest order did not appear in order history module
- Fixed: Checkout condition form did show invisible fields
- Fixed: Bug with minimum/maximum order total calculation.
- Fixed: missing price calculation function in Order Total shipping (Ticket #112)
- Fixed old image size message (Ticket #119)
- Fixed wrong template name for config switcher module
- Fixed product alias not generated correctly when alias field is before name (Ticket #123)
- Fixed template bug in iso_cart_full (Ticket #129)
- Fixed problem with checkout in Internet Explorer 6 (Ticket #128)

Version 0.1.0 stable (2010-05-23)
------------------------------
- Initial stable release